<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F5F6F7"
    android:padding="5dp"
    >

    <RadioGroup
        android:id="@+id/main_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/main_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_radio_home_pressed"
            android:text="@string/home"
            android:gravity="center"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/main_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_radio_location_pressed"
            android:text="@string/location"
            android:gravity="center"
            />
        <RadioButton
            android:id="@+id/main_friends"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_radio_friends_pressed"
            android:text="@string/friends"
            android:gravity="center"
            />
        <RadioButton
            android:id="@+id/main_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_radio_me_pressed"
            android:text="@string/me"
            android:gravity="center"
            />
    </RadioGroup>

</LinearLayout>