<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/topColor"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthyMessage"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:text="@string/height"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <EditText
            android:hint="178"
            android:textSize="20sp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <TextView
            android:text="cm"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:text="@string/weight"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <EditText
            android:hint="69"
            android:textSize="20sp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <TextView
            android:text="kg"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:text="@string/stepNumber"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <EditText
            android:hint="23322"
            android:textSize="20sp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <TextView
            android:text="步"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:text="@string/bloodType"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <EditText
            android:hint="AB"
            android:textSize="20sp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <TextView
            android:text="型"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:text="@string/sleep"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <EditText
            android:hint="8.0"
            android:textSize="20sp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <TextView
            android:text="小时"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:text="@string/breathRate"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <EditText
            android:hint="9.0"
            android:textSize="20sp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp" />
        <TextView
            android:text="次"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:text="@string/temperature"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <EditText
            android:hint="37.2"
            android:textSize="20sp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <TextView
            android:text="℃"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:text="@string/heartRate"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <EditText
            android:hint="60-100"
            android:textSize="20sp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <TextView
            android:text="次/分"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="40dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:text="@string/bloodPressure"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="40dp"
            />
        <EditText
            android:hint="128"
            android:textSize="20sp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="40dp"
            />
        <TextView
            android:text="--"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="20dp"
            android:layout_height="40dp"
            />
        <EditText
            android:hint="88"
            android:textSize="20sp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="40dp"
            />

        <TextView
            android:text="mmHg"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="40dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="10dp"
        android:orientation="horizontal"
        >
        <Button
            android:text="保存"
            android:layout_width="100dp"
            android:layout_height="50dp" />
        <Button
            android:text="重置"
            android:layout_width="100dp"
            android:layout_height="50dp" />
    </LinearLayout>
</LinearLayout>